Random map layouts implemented, hell yeah
Every floor is now generated with a randomly generated layout. Fuck yes.

--- a/arl.html
+++ b/arl.html
@@ -94,6 +94,7 @@
     <script src="ARL/Mob.js"></script>
     <script src="ARL/Loop.js"></script>
     <script src="ARL/View.js"></script>
+    <script src="ARL/Mapgen.js"></script>
     <script src="ARL/World.js"></script>
     <script src="ARL/Fov.js"></script>
     <script src="ARL/Action.js"></script>
