Revert "feat: a bunch of stuff I can't remember"
This reverts commit e9d511754c1013e0309fc223a3c12deacb9d5b89.

--- a/arl.html
+++ b/arl.html
@@ -69,9 +69,9 @@
                 <br>
                 <br>
                 <code id="instructions1">Controls: use the numpad above ^^^</code><br>
-                <code id="instructions2">2/4/6/8 or arrow keys - move</code><br>
-                <code id="instructions3">5 or space - wait</code><br>
-                <code id="instructions4">Press F to fire an arrow, 5 or space to confirm target</code><br>
+                <code id="instructions2">2/4/6/8 - move</code><br>
+                <code id="instructions3">5 - wait</code><br>
+                <code id="instructions4">If you die, any button above will start a new game</code><br>
             </div>
             
             <div id="msg_panel">
