Just a whole fistful of new changes.
- Changed the mapgen to do a 4x4 grid of 7x7 nodes instead of vice
  versa.
- Gutted BASE.js and moved everything out into subfiles so I'm not
  digging through a single 1500 line file to make new config data
  changes.
- Added two new terrain types: grates and reeds. Grates can be shot and
  seen through, but not walked through. Reeds can be walked through, but
  not shot or seen through. Implementing this was stupidly easy after
  making the BASE changes, goddamn. These still need visual tweaks but
  they work without issue.
- Grafted in some logic to the barebones mapgen to sprinkle sprankle
  some grates and reeds into the terrain. Grates have a chance to
  replace walls and reeds have a chance to replace floors.

--- a/arl.html
+++ b/arl.html
@@ -87,7 +87,27 @@
     </body>
     
     <script src="ARL.js"></script>
+    <!-- <script src="ARL/BASEold.js"></script> -->
     <script src="ARL/BASE.js"></script>
+    <script src="ARL/BASE/Constants.js"></script>
+    <script src="ARL/BASE/RefData.js"></script>
+    <script src="ARL/BASE/Routes.js"></script>
+    <script src="ARL/BASE/Schema.js"></script>
+    <script src="ARL/BASE/RefData/floorCore.js"></script>
+    <script src="ARL/BASE/RefData/gameCore.js"></script>
+    <script src="ARL/BASE/RefData/glyphCore.js"></script>
+    <script src="ARL/BASE/RefData/inputCore.js"></script>
+    <script src="ARL/BASE/RefData/mapgenCore.js"></script>
+    <script src="ARL/BASE/RefData/mobCore.js"></script>
+    <script src="ARL/BASE/RefData/physCore.js"></script>
+    <script src="ARL/BASE/RefData/terrainCore.js"></script>
+    <script src="ARL/BASE/RefData/viewCore.js"></script>
+    <script src="ARL/BASE/RefData/worldCore.js"></script>
+    <!-- 
+        It is important that worldCore.js be imported last out of the BASE scripts
+        because it contains the lookup table generation code that requires the other
+        data to be in place in BASE already.
+    -->
     <script src="ARL/Registry.js"></script>
     <script src="ARL/Router.js"></script>
     <script src="ARL/Util.js"></script>
